--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,33 @@
 body {
-  background-color: tan;
+  background-color: tan; 
   color: white;
+  font-family: sans-serif;
+}
+
+.paw-container {
+  background-image: url(../img/paws.png);
+  background-repeat: repeat-x;
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+  opacity: 0.3;
 }
 
 h1 {
   text-align: center;
   margin-bottom: 25px;
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 60px;
+  font-weight: 700;
+}
+
+h2 {
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: 600;
+  color: rgb(12, 166, 212);
 }
 
 .buttons {
@@ -23,17 +45,23 @@ h1 {
 }
 
 .pic {
-  width: 80%;
+  max-width: 90%;
+  height: 200px;
 }
 
 .pet-card {
   text-align: center;
-  padding-top: 5px;
   margin-bottom: 25px;
-  height: 500px;
+  height: 420px;
+}
+
+.panel {
   background-color: rgb(193, 128, 45);
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border: 4px solid rgb(12, 166, 212);
+}
+
+.panel-heading {
+  height: 80px;
 }
 
 .buttons {
